--- a/src/ctc_crf/gpu_den/CMakeLists.txt
+++ b/src/ctc_crf/gpu_den/CMakeLists.txt
@@ -5,7 +5,7 @@ set(openfst_dir "fstdir" CACHE STRING "fst directory")
 message(${openfst_dir})
 
 include_directories(${openfst_dir}/include)
-link_libraries(${openfst_dir}/libfst.so)
+link_libraries(${openfst_dir}/lib/libfst.so)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 --std=c++11")
 
 FIND_PACKAGE(CUDA 6.5)
