--- a/src/ctc_crf/Makefile
+++ b/src/ctc_crf/Makefile
@@ -18,6 +18,6 @@ PATHWEIGHT:
 	mkdir -p path_weight/build
 	cd path_weight/build && cmake -D openfst_dir:STRING=${openfst_dir} ..
 	cd path_weight/build && make
-CTCCRF: GPUCTC GPUDEN
+CTCCRF: GPUCTC GPUDEN PATHWEIGHT
 	python setup.py
 # python setup_1_0.py install for python3 and torch 1.0+
