[MileStone] CAT v2 temporarily rm all chunk-related codes merge hdf5 and  pickle convert script currently only finish recipes wsj and swbd rm python2 support

--- a/egs/wsj/exp/demo/config.json
+++ b/egs/wsj/exp/demo/config.json
@@ -1,6 +1,6 @@
 {
     "net": {
-        "type": "BLSTMv2",
+        "type": "BLSTM",
         "lossfn": "crf",
         "lamb": 0.01,
         "kwargs": {
