add Experimental results
Flatphone JoinAP-linear JoinAP-nonlinear experimental result

--- a/egs/commonvoice/exp/mc_flatphone/Finetune/Multilingual_finetune_it/config.json
+++ b/egs/commonvoice/exp/mc_flatphone/Finetune/Multilingual_finetune_it/config.json
@@ -1,13 +1,13 @@
 {
     "net": {
-        "type": "VGGBLSTM_JoinAP_Linear",
+        "type": "VGGBLSTM",
         "lossfn": "crf",
         "lamb": 0.01,
         "kwargs": {
             "n_layers": 3,
             "idim": 120,
             "hdim": 1024,
-            "num_classes": 85,
+            "num_classes": 36,
             "dropout": 0.5
         }
     },
@@ -26,7 +26,7 @@
         },
         "kwargs": {
             "epoch_min": 0,
-            "lr_stop": 1e-6,
+            "lr_stop": 1e-5,
             "reverse_metric_direc": true
         }
     }
