--- a/egs/commonvoice/exp/mc_nonlinear/Finetune/Crosslingual_finetune_pl/config.json
+++ b/egs/commonvoice/exp/mc_nonlinear/Finetune/Crosslingual_finetune_pl/config.json
@@ -1,13 +1,13 @@
 {
     "net": {
-        "type": "VGGBLSTM_JoinAP_Linear",
+        "type": "VGGBLSTM_JoinAP_NonLinear",
         "lossfn": "crf",
         "lamb": 0.01,
         "kwargs": {
             "n_layers": 3,
             "idim": 120,
             "hdim": 1024,
-            "num_classes": 85,
+            "num_classes": 49,
             "dropout": 0.5
         }
     },
