--- a/egs/aishell/exp/lm/lm-v2-word-3gram/config.json
+++ b/egs/aishell/exp/lm/lm-v2-word-3gram/config.json
@@ -2,7 +2,7 @@
     "decoder": {
         "type": "NGram",
         "kwargs": {
-            "f_binlm": "exp/lm/lm-v6/3gram.klm",
+            "f_binlm": "exp/lm/lm-v2-word-3gram/3gram.klm",
             "gram_order": 3,
             "num_classes": 498115
         }
