fix compability issue with python<3.9
rm unused deps

[template] fix error caused by recent updates

error fix
format cat.rnnt.train_unified with black

--- a/egs/TEMPLATE/exp/asr-ctc/config.json
+++ b/egs/TEMPLATE/exp/asr-ctc/config.json
@@ -12,7 +12,7 @@
             "dropout": 0.2,
             "hdim": 512,
             "idim": 80,
-            "n_layers": 2,
+            "num_layers": 2,
             "num_classes": 4,
             "with_head": true
         }
