--- a/egs/TEMPLATE/exp/asr-ctc-crf/config.json
+++ b/egs/TEMPLATE/exp/asr-ctc-crf/config.json
@@ -15,7 +15,7 @@
             "dropout": 0.2,
             "hdim": 512,
             "idim": 80,
-            "n_layers": 2,
+            "num_layers": 2,
             "num_classes": 8,
             "with_head": true
         }
