[dep] rm ctc_crf path_weight related codes

--- a/src/ctc_crf/Makefile
+++ b/src/ctc_crf/Makefile
@@ -5,7 +5,7 @@
 
 openfst_dir=${CURDIR}/openfst-1.6.7/build
 
-.PHONY: OPENFST GPUCTC GPUDEN PATHWEIGHT CTCCRF
+.PHONY: OPENFST GPUCTC GPUDEN CTCCRF
 all: CTCCRF
 OPENFST:
 	if [ ! -f "openfst-1.6.7.tar.gz" ]; then wget http://www.openfst.org/twiki/pub/FST/FstDownload/openfst-1.6.7.tar.gz; fi
@@ -20,16 +20,11 @@ GPUDEN: OPENFST
 	mkdir -p gpu_den/build
 	cd gpu_den/build && cmake -D openfst_dir:STRING=${openfst_dir} ..
 	cd gpu_den/build && make
-PATHWEIGHT: OPENFST
-	mkdir -p path_weight/build
-	cd path_weight/build && cmake -D openfst_dir:STRING=${openfst_dir} ..
-	cd path_weight/build && make
-CTCCRF: GPUCTC GPUDEN PATHWEIGHT
+CTCCRF: GPUCTC GPUDEN 
 	python3 setup.py install
 
 clean:
 	python setup.py clean --all
-	rm -rf gpu_{ctc,den}/build path_weight/build/ build/ \
+	rm -rf gpu_{ctc,den}/build build/ \
 		openfst-1.6.7/ *.tar.gz \
-		dist/ ctc_crf.egg-info/
-	
+		dist/ ctc_crf.egg-info/	
