--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 -e git+https://github.com/webdataset/webdataset.git@d7334016f44a03c4a385971aa835c4f460d3f30a#egg=webdataset
 # warp-ctct >= 0.3.0
 -e git+https://github.com/maxwellzh/warp-ctct.git#egg=warp-ctct
+# ctc-align >= 0.0.1
+-e git+https://github.com/maxwellzh/ctc-align-cuda.git#egg=ctc-align
 
 # module dependencies
 torch>=1.9.0
